<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_screen_name_register_mail"
        android:textSize="30dp"
        android:background="#FFA500"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mail"/>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#909090"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_mail_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#909090"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_passward"/>

    <EditText
        android:id="@+id/et_passward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#909090"
        android:textSize="20dp"
        android:inputType="textWebPassword"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/et_passward_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#909090"
        android:textSize="20dp"
        android:inputType="textWebPassword"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_back"/>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_register"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_skip_0"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000090"
            android:text="@string/tv_skip"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Q_and_A_0"/>

        <TextView
            android:id="@+id/tv_Q_and_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000090"
            android:text="@string/tv_Q_and_A"/>

    </LinearLayout>

</LinearLayout>