<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_screen_name_explanation"
        android:textSize="25dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_explanation"
        android:textSize="10dp"/>

    <ImageView
        android:id="@+id/img_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_explanation"/>

    <Button
        android:id="@+id/bt_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_explanation"/>

</LinearLayout>